# wolf_sql

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/wolf_sql/: __init__.py  service.py
tests/: test_database.py
