[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wolf_sql"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "trollfot@gmail.com"},
]
requires-python = ">=3.11"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "wolf",
  "sqlmodel",
  "orjson",
  "structlog",
]

[project.optional-dependencies]
test = [
    'pytest',
    'webtest'
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["wolf_sql"]
namespaces = false
